# BasicGL

./: BasicGL.sln  README.md
BasicGL/: BasicGL.vcxproj  BasicGL.vcxproj.filters  main.cpp  obj.cpp  race.cpp  raw.raw
NewGL/: CMakeLists.txt  controls2.cpp  controls2.hpp  mcommon.cpp  mobil.cpp  mobil.hpp  object3.cpp  object3.hpp  testmain.cpp
NewGL/common/: controls.cpp  controls2.cpp  controls2.hpp
NewGL/project/: rend.cpp
